# colourado_iterator

./: Cargo.toml  README.md
examples/: preview.rs
src/: color.rs  lib.rs
