[package]
name = "colourado-iter"
description = "A small and minimalistic library to generate a random color palette of infinite size"
version = "1.1.0"
authors = ["PrydeRage <marius.brandt@hotmail.com>", "Rafaeltheraven <rafael@raaf.nu>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Rafaeltheraven/colourado_iterator"
readme = "README.md"

[dependencies]
rand = "0.8.5"

[dev-dependencies]
piston_window = "0.131.0"
float-cmp = "0.9.0"
